# vlezz-client

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml
.github/workflows/: ci.yml  release.yml
apps/backend/: Dockerfile  Makefile  go.mod  go.sum
apps/backend/cmd/rayflowd/: main.go
apps/backend/internal/api/: connection_handler.go  cores_handler.go  diagnostics_handler.go  handlers_common.go  health_handler.go  logs_handler.go  middleware.go  nodes_handler.go  router.go  routing_handler.go  runtime_handler.go  settings_handler.go  subscriptions_handler.go  system_proxy_handler.go  zapret_handler.go
apps/backend/internal/app/: lifecycle.go
apps/backend/internal/config/: app_config.go  singbox_config.go  xray_config.go  zapret_config.go
apps/backend/internal/connection/: manager.go  manager_test.go
apps/backend/internal/core/: options.go
apps/backend/internal/diagnostics/: dns_check.go  http_check.go  ip_check.go  ip_check_test.go  latency.go  tcp_check.go
apps/backend/internal/logs/: manager.go  (+1 more)
apps/backend/migrations/: 001_initial.sql  002_core_settings.sql  003_proxy_mvp.sql
apps/desktop/: index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
apps/desktop/src/: App.vue  i18n.ts  main.ts  style.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
docs/: api.md  architecture.md  security.md
scripts/: dev-backend.ps1
(+77 files in other folders)
