[package]
name = "rayflow-client"
version = "0.1.0"
description = "RayFlow Client desktop shell"
authors = ["RayFlow contributors"]
license = "Apache-2.0"
edition = "2021"

[lib]
name = "rayflow_client_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"

